--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bonjour Panda !</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav class="col-1">
+        <h1>Bonjour Panda !</h1>
+        <p id="lang">
+            パンダ | 熊猫
+        </p>
+
         <div class="box">
             <div class="head">  
                 <div class="head-copy"></div>
@@ -25,7 +32,6 @@
         </div>
     </nav>
     <div class="col-2">
-        <header>Bonjour Panda !</header>
         <main class="content">
             <article id="panda-fact"></article>
         </main>
